<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@drawable/screen_bg"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/monotype_corsiva"
            android:text="@string/reserve_title"
            android:textColor="@color/cardColor"
            android:textSize="75sp"></TextView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_weight="1" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="7">

        <EditText
            android:id="@+id/txtDate"
            android:layout_width="350dp"
            android:layout_height="41dp"
            android:layout_marginTop="221dp"
            android:layout_marginBottom="251dp"
            android:focusableInTouchMode="false"
            android:hint="@string/reserve_partydate_hint"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtLocation"
            android:layout_width="350dp"
            android:layout_height="41dp"
            android:layout_marginTop="167dp"
            android:layout_marginBottom="305dp"
            android:hint="@string/reserve_partylocation_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtPartyTheme"
            android:layout_width="350dp"
            android:layout_height="41dp"
            android:layout_marginTop="117dp"
            android:layout_marginBottom="355dp"
            android:hint="@string/reserve_partytheme_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtPartyName"
            android:layout_width="350dp"
            android:layout_height="41dp"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="408dp"
            android:hint="@string/reserve_partyname_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtPartyTime"
            android:layout_width="350dp"
            android:layout_height="41dp"
            android:layout_marginTop="274dp"
            android:layout_marginBottom="198dp"
            android:focusableInTouchMode="false"
            android:hint="@string/reserve_partytime_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/txtPartyColors"
            android:layout_width="160dp"
            android:layout_height="41dp"
            android:layout_marginTop="327dp"
            android:layout_marginBottom="145dp"
            android:hint="@string/reserve_partycolors_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txtNumGuests"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtNumGuests"
            android:layout_width="160dp"
            android:layout_height="41dp"
            android:layout_marginTop="327dp"
            android:layout_marginBottom="145dp"
            android:hint="@string/reserve_partynumguests_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/txtPartyColors"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/btnReserve"
            android:layout_width="339dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="426dp"
            android:layout_marginBottom="39dp"
            android:background="@drawable/rounded_button"
            android:text="@string/reserve_btn_submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/switchBalloons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="288dp"
            android:layout_marginTop="386dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="100dp"
            android:text="@string/reserve_partyballoons_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/switchCake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="386dp"
            android:layout_marginEnd="306dp"
            android:layout_marginBottom="100dp"
            android:text="@string/reserve_partycake_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>





</LinearLayout>