<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@drawable/screen_bg"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/monotype_corsiva"
            android:text="@string/top_welcome"
            android:textColor="@color/cardColor"
            android:textSize="80sp"></TextView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/monotype_corsiva"
            android:text="@string/top_second"
            android:textColor="@color/cardColor"
            android:textSize="40sp"></TextView>
    </RelativeLayout>



    <android.support.constraint.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="7">


        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="340dp"
            android:layout_height="61dp"
            android:layout_marginBottom="348dp"
            android:drawableLeft="@drawable/email_icon"
            android:drawablePadding="5dp"
            android:hint="@string/login_hint_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txtPassword"
            android:drawableLeft="@drawable/password_icon"
            android:drawablePadding="5dp"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="276dp"
            android:hint="@string/password_hint_text"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="339dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="256dp"
            android:background="@drawable/rounded_button"
            android:text="@string/activity_login_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="316dp"
        android:background="@drawable/rounded_button"
        android:text="@string/activity_login_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>





</LinearLayout>