<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@drawable/screen_bg"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/textGrid"
            android:fontFamily="@font/monotype_corsiva"
            android:textColor="@color/cardColor"
            android:textSize="100sp"
            android:text="Register "
            android:layout_gravity="center_horizontal"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></TextView>

    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:padding="1dp"
        android:rowCount="3">

        <EditText
            android:id="@+id/txtFirstName"
            android:layout_width="340dp"
            android:layout_height="61dp"
            android:layout_marginBottom="364dp"
            android:hint="@string/register_firstname_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txtLastName"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="304dp"
            android:hint="@string/register_lastname_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="252dp"
            android:hint="@string/register_password_text"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txtConfirmPassword"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="192dp"
            android:hint="@string/register_confirm_text"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="132dp"
            android:hint="@string/register_email_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="339dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="464dp"
            android:background="@drawable/rounded_button"
            android:text="register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>


</LinearLayout>